--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,20 +82,22 @@ background-color: #eee;
 }
 .itemC h2 {
   /* margin: 0; */
-  padding: 0;
+  padding: 2px;
   font-size: 18px;
-  margin-top: 4px;
+  margin-top: 10px;
   margin-right: auto;
   margin-left: 10px;
-  /* width: 30%; */
-  line-height: 0.1;
+  width: 30%;
+  line-height: 0.5;
 }
 .itemC p {
   font-size: 16px; 
   line-height: 0.5;
   overflow: hidden;
-  margin: 0; 
-  padding: 0;
+  margin-right: auto;
+  margin-left: 10px; 
+  width: 30%;
+  padding: 2px;
 }
 .itemC a{
   color: black;
