--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,6 +97,7 @@ background-color: #eee;
   overflow: hidden;
   margin-right: auto;
   margin-left: 10px;
+  white-space: nowrap; /* 文字列を折り返さない */
   width: 80%;
 }
 .itemC a{
