--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,11 +101,20 @@ background-color: #eee;
   height: 80%;
   width: 80%;
 }
+.itemC h3 {
+  font-size: 10px; 
+  line-height: 0.8;
+  overflow: hidden;
+  margin-right: 10px;
+  margin-left: auto;
+  white-space: nowrap; /* 文字列を折り返さない */
+  height: 20%;
+  width: 20%;
+}
 .itemC a{
   color: black;
   text-decoration: none;
 }
-
 /* #################### */
 
 .itemD{
