--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,12 +89,12 @@ background-color: #eee;
   margin-left: 10px;
   height: 30%;
   width: 30%;
-  line-height: 0.3;
+  line-height: 0.1;
 }
 .itemC h2 {
   font-size: 12px; 
-  line-height: 0.3;
-  overflow: hidden;
+  line-height: 0.1;
+  overflow: visible; /* hidden; */
   margin-right: auto;
   margin-left: 10px;
   white-space: nowrap; /* 文字列を折り返さない */
@@ -103,8 +103,8 @@ background-color: #eee;
 }
 .itemC h3 {
   font-size: 10px; 
-  line-height: 0.4;
-  overflow: hidden;
+  line-height: 0.1;
+  overflow: visible; /* hidden; */
   margin-right: 10px;
   margin-left: auto;
   white-space: nowrap; /* 文字列を折り返さない */
