--- a/Diary/stylesheet_diary_common.css
+++ b/Diary/stylesheet_diary_common.css
@@ -21,7 +21,7 @@ body{
     margin: 10px 0 5px 0;
 }
 
-.title_link a{
+.title p a{
   color: black; /* リンクの色を指定 */
   text-decoration: none; /* リンクの下線を非表示 */
 }
@@ -43,8 +43,8 @@ body{
 
 .header-list li a {
   color: white; /* リンクの色を指定 */
-  /* text-decoration: none; リンクの下線を非表示 */
-  text-decoration: none!important; /* */
+  text-decoration: none;  /* リンクの下線を非表示 */
+  /*  text-decoration: none!important; */
 }
 
 main{
