--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,7 +82,7 @@ background-color: #eee;
 }
 .itemC h1 {
   /* margin: 0; */
-  padding: 5px 40px 20px 20px;
+  padding-top: 5px; /* 40px 20px 20px; */
   font-size: 15px;
   margin-top: 10px;
   margin-right: auto;
