--- a/Diary/stylesheet_diary_common.css
+++ b/Diary/stylesheet_diary_common.css
@@ -21,10 +21,10 @@ body{
     margin: 10px 0 5px 0;
 }
 
-.title p a{
-  color: black; /* リンクの色を指定 */
-  text-decoration: none; /* リンクの下線を非表示 */
-}
+p a {	 
+ color: black;
+ text-decoration: none; 	 
+} 
 
 .nav{
    height: 70px;
