--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,7 +78,9 @@ margin-right: 5px; /* 10px 30pxだと右の余白が空きすぎる */
 /* #################### */
 .itemC{
 background-color: #eee;	
-/* margin-right: 5px; */
+overflow: visible; /* hidden; */
+white-space: nowrap; /* 文字列を折り返さない */
+margin-right: 5px;
 }
 .itemC h1 {
   /* margin: 0; */
@@ -87,29 +89,25 @@ background-color: #eee;
   margin-top: 10px;
   margin-right: auto;
   margin-left: 10px;
-  height: 30%;
-  width: 30%;
-  line-height: 0.1;
+  /* height: 30%; */
+ /*  width: 30%; */
+ /* line-height: 0.1; */
 }
 .itemC h2 {
   font-size: 12px; 
-  line-height: 0.1;
-  overflow: visible; /* hidden; */
+ /* line-height: 0.1; */
   margin-right: auto;
   margin-left: 10px;
-  white-space: nowrap; /* 文字列を折り返さない */
-  height: 30%;
-  width: 30%;
+  /* height: 30%; */
+ /*  width: 30%; */
 }
 .itemC h3 {
   font-size: 10px; 
-  line-height: 0.1;
-  overflow: visible; /* hidden; */
+ /* line-height: 0.1; */
   margin-right: 10px;
   margin-left: auto;
-  white-space: nowrap; /* 文字列を折り返さない */
-  height: 20%;
-  width: 20%;
+ /* height: 20%; */
+ /* width: 20%; */
 }
 .itemC a{
   color: black;
