--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,7 +107,7 @@ margin-right: 5px;
  /* line-height: 0.1; */
   margin-right: 10px;
   margin-left: auto;
-  margin-bottom: 10px; /* ? */
+  margin-top: 8px; /* ? */
  /* height: 20%; */
  /* width: 20%; */
 }
