--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,9 +110,9 @@ margin-right: 5px;
 .itemC h3 {
   font-size: 10px; 
  /* line-height: 0.1; */
-  margin-right: 10px;
-  margin-left: auto;
-  margin-bottom: 5px; /* bottom->10 ? */
+  padding-right: 10px;
+  padding-left: auto;
+  padding-bottom: 5px; /* bottom->10 ? */
  /* height: 20%; */
  /* width: 20%; */
 }
