--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,10 +110,10 @@ margin-right: 5px;
 .itemC h3 {
   font-size: 10px; 
  /* line-height: 0.1; */
-  padding-right: 10px;
-  text-align: right;
- /* padding-left: auto; */
-  padding-bottom: 10px; /* bottom->10 ? */
+ margin-right: 0;
+ margin-left: auto;
+ width: 30%;
+ /* padding-bottom: 10px;  bottom->10 ? */
  /* height: 20%; */
  /* width: 20%; */
 }
