--- a/stylesheet.css
+++ b/stylesheet.css
@@ -112,6 +112,7 @@ margin-right: 5px;
  /* line-height: 0.1; */
  margin-right: 0;
  margin-left: auto;
+ margin-bottom: 10px; /* */
  width: 30%;
  /* padding-bottom: 10px;  bottom->10 ? */
  /* height: 20%; */
