--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,7 +105,8 @@ margin-right: 5px;
   margin-right: auto;
   margin-left: 10px;
   /* height: 30%; */
- /*  width: 30%; */
+ width: 30%;
+ height: 40px;	
 }
 .itemC h3 {
   font-size: 10px; 
@@ -117,6 +118,7 @@ margin-right: 5px;
  /* padding-bottom: 10px;  bottom->10 ? */
  /* height: 20%; */
  /* width: 20%; */
+  height: 40px;	
 }
 .itemC a{
   color: black;
