--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,7 +110,7 @@ margin-right: 5px;
 }
 .itemC h3 {
   font-size: 10px; 
- /* line-height: 0.1; */
+  line-height: 0.1;
  margin-right: 0;
  margin-left: auto;
  margin-bottom: 10px; /* */
@@ -118,7 +118,7 @@ margin-right: 5px;
  /* padding-bottom: 10px;  bottom->10 ? */
  /* height: 20%; */
  /* width: 20%; */
-  height: 40px;	
+  height: 20px;	/* 40px */
 }
 .itemC a{
   color: black;
