--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,7 +118,7 @@ margin-right: 5px;
  /* padding-bottom: 10px;  bottom->10 ? */
  /* height: 20%; */
  /* width: 20%; */
-  height: 20px;	/* 40px */
+ /* height: 40px; */
 }
 .itemC a{
   color: black;
