--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,6 +111,7 @@ margin-right: 5px;
 .itemC h3 {
   font-size: 10px; 
  /*  line-height: 0.1; */
+ text-align: right;
  margin-right: 0;
  margin-left: auto;
  width: 30%;
