--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,9 +111,9 @@ margin-right: 5px;
 .itemC h3 {
   font-size: 10px; 
  /*  line-height: 0.1; */
- text-align: right;
  margin-right: 0;
- margin-left: auto;
+  margin-left: auto;
+  width: 30%;
  width: 30%;
 /*  margin-bottom: 10px; */
  /* padding-bottom: 10px;  bottom->10 ? */
