--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,16 +110,15 @@ margin-right: 5px;
 }
 .itemC h3 {
   font-size: 10px; 
- /*  line-height: 0.1; */
- margin-right: 0;
-  margin-left: auto;
-  width: 30%;
- width: 30%;
-/*  margin-bottom: 10px; */
- /* padding-bottom: 10px;  bottom->10 ? */
- /* height: 20%; */
- /* width: 20%; */
- /* height: 40px; */
+  /* line-height: 0.1; */
+   padding-right: 10px;
+   padding-left: auto;
+   padding-bottom: 5px; /* bottom->10 ? */
+   text-align: right;
+  /* padding-left: auto; */
+   padding-bottom: 10px; /* bottom->10 ? */
+  /* height: 20%; */
+  /* width: 20%; */
 }
 .itemC a{
   color: black;
