--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,15 +110,13 @@ margin-right: 5px;
 }
 .itemC h3 {
   font-size: 10px; 
-  /* line-height: 0.1; */
-   padding-right: 10px;
-   padding-left: auto;
-   padding-bottom: 5px; /* bottom->10 ? */
-   text-align: right;
-  /* padding-left: auto; */
-   padding-bottom: 10px; /* bottom->10 ? */
-  /* height: 20%; */
-  /* width: 20%; */
+  line-height: 0.1;
+  overflow: visible; /* hidden; */
+  margin-right: 10px;
+  margin-left: auto;
+  white-space: nowrap; /* 文字列を折り返さない */
+  height: 20%;
+  width: 20%;
 }
 .itemC a{
   color: black;
