--- a/stylesheet.css
+++ b/stylesheet.css
@@ -110,12 +110,12 @@ margin-right: 5px;
 }
 .itemC h3 {
   font-size: 10px; 
-  line-height: 0.1;
+  /* line-height: 0.1; */
   overflow: visible; /* hidden; */
-  margin-right: 10px;
+  margin-right: 0;
   margin-left: auto;
   white-space: nowrap; /* 文字列を折り返さない */
-  height: 20%;
+  /* height: 20%; */
   width: 20%;
 }
 .itemC a{
