--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,7 +80,7 @@ margin-right: 5px; /* 10px 30pxだと右の余白が空きすぎる */
 background-color: #eee;	
 overflow: visible; /* hidden; */
 /* white-space: nowrap;  文字列を折り返さない */
-/* overflow-wrap: break-all;  文字列を折り返す */
+overflow-wrap: break-all;  文字列を折り返す
 /* ----- */
 white-space: nowrap;
 overflow: hidden;
@@ -106,7 +106,7 @@ margin-right: 5px;
   margin-left: 10px;
   /* height: 30%; */
  width: 30%;
- height: 40px;	
+ /* height: 40px; */	
 }
 .itemC h3 {
   font-size: 10px; 
