--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,7 +114,7 @@ margin-right: 5px;
   overflow: visible; /* hidden; */
   margin-right: 0;
   margin-left: auto;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   white-space: nowrap; /* 文字列を折り返さない */
   /* height: 20%; */
   width: 20%;
