--- a/stylesheet.css
+++ b/stylesheet.css
@@ -94,28 +94,27 @@ margin-right: 5px;
   margin-top: 10px;
   margin-right: auto;
   margin-left: 10px;
-  /* height: 30%; */
- /*  width: 30%; */
- /* line-height: 0.1; */
+  height: 30%;
+  width: 30%;
+  line-height: 0.1;
 }
 .itemC h2 {
   font-size: 12px; 
- /* line-height: 0.1; */
+  line-height: 0.1;
   margin-right: auto;
   margin-left: 10px;
-  /* height: 30%; */
- width: 30%;
- /* height: 40px; */	
+  white-space: nowrap; /* 文字列を折り返さない */
+  height: 30%;
+  width: 30%;
 }
 .itemC h3 {
   font-size: 10px; 
-  /* line-height: 0.1; */
+  line-height: 0.1;
   overflow: visible; /* hidden; */
-  margin-right: 0;
+  margin-right: 10px;
   margin-left: auto;
-  padding-bottom: 10px;
   white-space: nowrap; /* 文字列を折り返さない */
-  /* height: 20%; */
+  height: 20%;
   width: 20%;
 }
 .itemC a{
