--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,6 +108,7 @@ margin-right: 5px;
   overflow: visible; /* hidden; */
   margin-right: 10px;
   margin-left: auto;
+  margin-bottom: 10px; /* 下に潜るのを上げたい */
   white-space: nowrap; /* 文字列を折り返さない */
   height: 20%;
   width: 20%;
