--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,11 +106,11 @@ margin-right: 5px;
   font-size: 10px; 
   line-height: 0.1;
   overflow: visible; /* hidden; */
-  margin-right: 10px;
+  margin-right: 0; /* 10px; */
   margin-left: auto;
   /* margin-bottom: 10px; 下に潜るのを上げたい */
   white-space: nowrap; /* 文字列を折り返さない */
-  height: 40px; /* 20% */
+  height: 20%; /* 20% */
   width: 20%;
 }
 .itemC a{
