--- a/stylesheet.css
+++ b/stylesheet.css
@@ -104,7 +104,7 @@ margin-right: 5px;
 }
 .itemC h3 {
   font-size: 10px; 
- /* line-height: 0.1; */
+  line-height: 0.1;
   overflow: visible; /* hidden; */
   margin-right: 10px; /* 10px; */
   margin-left: auto;
