--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,7 +95,7 @@ margin-right: 5px;
 }
 .itemC h2 {
   font-size: 12px; 
- /* line-height: 0.1; */
+  line-height: 0.1;
   margin-right: auto;
   margin-left: 10px;
   white-space: nowrap; /* 文字列を折り返さない */
@@ -108,7 +108,7 @@ margin-right: 5px;
   overflow: visible; /* hidden; */
   margin-right: 10px; /* 10px; */
   margin-left: auto;
-  /* margin-bottom: 10px; 下に潜るのを上げたい */
+  margin-bottom: 20px; /* 下に潜るのを上げたい */
   white-space: nowrap; /* 文字列を折り返さない */
   height: 20%; /* 20% */
   width: 20%;
