--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,7 +105,7 @@ margin-right: 5px;
 .itemC h3 {
   font-size: 10px; 
   line-height: 0.1;
-  overflow: visible; /* hidden; */
+  /* overflow: visible; hidden; */
   margin-right: 10px; /* 10px; */
   margin-left: auto;
   margin-bottom: 20px; /* 下に潜るのを上げたい */
