--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,7 +108,8 @@ margin-right: 5px;
   /* overflow: visible; hidden; */
   margin-right: 10px; /* 10px; */
   margin-left: auto;
-  margin-bottom: 20px; /* 下に潜るのを上げたい */
+ /* margin-bottom: 20px;  下に潜るのを上げたい */
+  padding-bottom: 20px;
   white-space: nowrap; /* 文字列を折り返さない */
   height: 20%; /* 20% */
   width: 20%;
