--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,7 +109,7 @@ margin-right: 5px;
   margin-right: 10px; /* 10px; */
   margin-left: auto;
  /* margin-bottom: 20px;  下に潜るのを上げたい */
-  padding-bottom: 20px;
+  bottom: 10%;
   white-space: nowrap; /* 文字列を折り返さない */
  /*  height: 20%; 20% */
   width: 20%;
