--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,7 +95,8 @@ margin-right: 5px;
 }
 .itemC h2 {
   font-size: 12px; 
-  line-height: 0.1;
+ /* line-height: 0.1; */
+  bottom: 20%;
   margin-right: auto;
   margin-left: 10px;
   white-space: nowrap; /* 文字列を折り返さない */
