--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,10 +99,9 @@ margin-right: 5px;
   bottom: 20%;
   margin-right: auto;
   margin-left: 10px;
-  padding 0;
   white-space: nowrap; /* 文字列を折り返さない */
  /* height: 30%; */
-  width: 30%;
+ /*  width: 30%; */
 }
 .itemC h3 {
   font-size: 10px; 
@@ -114,7 +113,7 @@ margin-right: 5px;
   bottom: 10%;
   white-space: nowrap; /* 文字列を折り返さない */
  /*  height: 80%; 20% */
-  width: 20%;
+ /*  width: 20%; */
 }
 .itemC a{
   color: black;
