--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,7 +96,7 @@ margin-right: 5px;
 .itemC h2 {
   font-size: 12px; 
  /* line-height: 0.1; */
-  padding-top: 15px; 
+  margin-top: 12px;
   margin-right: auto;
   margin-left: 10px;
   white-space: nowrap; /* 文字列を折り返さない */
@@ -105,7 +105,7 @@ margin-right: 5px;
 }
 .itemC h3 {
   font-size: 10px; 
-  padding-top: 20px; 
+  margin-top: 15px;
   /* overflow: visible; hidden; */
   margin-right: 10px; /* 10px; */
   margin-left: auto;
