--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,7 +106,7 @@ margin-right: 5px;
 .itemC h3 {
   font-size: 10px; 
   /* overflow: visible; hidden; */
-  margin-right: 0; /* 10px; */
+  margin-right: 10px; /* 10px; */
   margin-left: auto;
  /* margin-bottom: 20px;  下に潜るのを上げたい */
   white-space: nowrap; /* 文字列を折り返さない */
