--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,7 +86,7 @@ margin-right: 5px;
   /* margin: 0; */
   padding-top: 5px; /* 40px 20px 20px; */
   font-size: 15px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   margin-right: auto;
   margin-left: 10px;
   height: 30%;
