--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,7 +86,7 @@ margin-right: 5px;
   /* margin: 0; */
   padding-top: 5px; /* 40px 20px 20px; */
   font-size: 15px;
-  /* margin-top: 10px; */
+  margin-top: 10px;
   margin-right: auto;
   margin-left: 10px;
   height: 30%;
@@ -95,28 +95,25 @@ margin-right: 5px;
 }
 .itemC h2 {
   font-size: 12px; 
- /* line-height: 0.1; */
-/*   margin-top: 10px; */
+  line-height: 0.1;
+
   margin-right: auto;
   margin-left: 10px;
   white-space: nowrap; /* 文字列を折り返さない */
- /* height: 30%; */
- /*  width: 30%; */
+  height: 30%;
+  width: 30%;
 }
 .itemC h3 {
   font-size: 10px; 
-  /* overflow: visible; hidden; */
-  margin-right: 10px; /* 10px; */
+  line-height: 0.1;
+  overflow: visible; /* hidden; */
+  margin-right: 10px;
   margin-left: auto;
- /* margin-bottom: 20px;  下に潜るのを上げたい */
   white-space: nowrap; /* 文字列を折り返さない */
- /*  height: 80%; 20% */
- /*  width: 20%; */
+  height: 20%;
+  width: 20%;
 }
-.itemC a{
-  color: black;
-  text-decoration: none;
-}
+
 /* #################### */
 
 .itemD{
