--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,6 +113,10 @@ margin-right: 5px;
   height: 20%;
   width: 20%;
 }
+.itemC a{
+  color: black;
+  text-decoration: none;
+}
 
 /* #################### */
 
