--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,40 +78,31 @@ margin-right: 5px; /* 10px 30pxだと右の余白が空きすぎる */
 /* #################### */
 .itemC{
 background-color: #eee;	
-overflow: visible; /* hidden; */
-/* overflow-wrap: break-all;  文字列を折り返す */
 margin-right: 5px;
+
+display: grid;
+grid-template-rows: repeat(3, 1fr); /* 3行 */
+
+/* overflow: visible; hidden; */
+/* overflow-wrap: break-all;  文字列を折り返す */
 }
 .itemC h1 {
   /* margin: 0; */
   padding-top: 5px; /* 40px 20px 20px; */
   font-size: 15px;
-  margin-top: 10px;
   margin-right: auto;
   margin-left: 10px;
-  height: 30%;
-  width: 30%;
-  line-height: 0.1;
 }
 .itemC h2 {
   font-size: 12px; 
-  line-height: 0.1;
-
   margin-right: auto;
   margin-left: 10px;
   white-space: nowrap; /* 文字列を折り返さない */
-  height: 30%;
-  width: 30%;
 }
 .itemC h3 {
   font-size: 10px; 
-  line-height: 0.1;
-  overflow: visible; /* hidden; */
-  margin-right: 0;
+  margin-right: 10px;
   margin-left: auto;
-  white-space: nowrap; /* 文字列を折り返さない */
-  height: 20%;
-  width: 20%;
 }
 .itemC a{
   color: black;
