--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,7 +82,7 @@ margin-right: 5px;
 
 display: grid;
 grid-template-rows: repeat(3, 1fr); /* 3行 */
-
+grid-gap: 10px;
 /* overflow: visible; hidden; */
 /* overflow-wrap: break-all;  文字列を折り返す */
 }
@@ -112,7 +112,7 @@ grid-template-rows: repeat(3, 1fr); /* 3行 */
 /* #################### */
 
 .itemD{
-background-color: #888; /* #eee #888 */ 
+background-color: #eee; /* #eee #888 */ 
 text-align: center;
 margin-right: 5px;
 	/* right: 10px; */
