--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,13 +84,13 @@ grid-template-rows: repeat(3, 1fr); /* 3行 */
 grid-gap: 10px;
 }
 .itemC h1 {
-  font-size: 15px;
+ /* font-size: 15px; */
 }
 .itemC h2 {
-  font-size: 12px; 
+  /*  font-size: 12px;  */
 }
 .itemC h3 {
-  font-size: 10px; 
+ /*   font-size: 10px;  */
 }
 .itemC a{
   color: black;
@@ -100,7 +100,7 @@ grid-gap: 10px;
 /* #################### */
 
 .itemD{
-background-color: #eee; /* #eee #888 */ 
+background-color: #888; /* #eee #888 */ 
 text-align: center;
 margin-right: 5px;
 	/* right: 10px; */
