--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,17 +84,20 @@ grid-template-rows: repeat(3, 1fr); /* 3行 */
 grid-gap: 1px;
 }
 .itemC h1 {
- font-size: 10px;
+ font-size: 14px; /* h1のdefault文字サイズは48px */
+ line-height: 0.5;  /* h1のdefault行間は1 */
   margin-right: auto;
   margin-left: 10px;
 }
 .itemC h2 {
- font-size: 10px;
+ font-size: 12px; /* h2のdefault文字サイズは36px */
+ line-height: 0.5;  /* h2のdefault行間は1.333 */
   margin-right: auto;
   margin-left: 10px;
 }
 .itemC h3 {
- font-size: 8px;
+ font-size: 10px; /* h3のdefault文字サイズは24px */
+ line-height: 0.5;  /* h3のdefault行間は1 */
   margin-right: 10px;
   margin-left: auto;
 }
