--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,7 +81,7 @@ background-color: #eee;
 margin-right: 5px;
 display: grid;
 grid-template-rows: repeat(3, 1fr); /* 3行 */
-grid-gap: 1px;
+grid-gap: 0.5px;
 }
 .itemC h1 {
  font-size: 14px; /* h1のdefault文字サイズは48px */
@@ -90,14 +90,15 @@ grid-gap: 1px;
   margin-left: 10px;
 }
 .itemC h2 {
- font-size: 12px; /* h2のdefault文字サイズは36px */
+ font-size: 14px; /* h2のdefault文字サイズは36px */
  line-height: 0.5;  /* h2のdefault行間は1.333 */
   margin-right: auto;
   margin-left: 10px;
+  overflow-wrap: break-all; /* 折り返し */
 }
 .itemC h3 {
- font-size: 10px; /* h3のdefault文字サイズは24px */
- line-height: 0.5;  /* h3のdefault行間は1 */
+ font-size: 12px; /* h3のdefault文字サイズは24px */
+ line-height: 0.2;  /* h3のdefault行間は1 */
   margin-right: 10px;
   margin-left: auto;
 }
