--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,23 +84,24 @@ grid-template-rows: repeat(3, 1fr); /* 3行 */
 grid-gap: 0.5px;
 }
 .itemC h1 {
- font-size: 14px; /* h1のdefault文字サイズは48px */
+ font-size: 14px; /* h1のdefault文字サイズは48px 12px 14px */
  line-height: 0.5;  /* h1のdefault行間は1 */
   margin-right: auto;
   margin-left: 10px;
 }
 .itemC h2 {
- font-size: 14px; /* h2のdefault文字サイズは36px */
+ font-size: 14px; /* h2のdefault文字サイズは36px 12px 14px */
  line-height: 0.5;  /* h2のdefault行間は1.333 */
   margin-right: auto;
   margin-left: 10px;
   overflow-wrap: break-all; /* 折り返し */
 }
 .itemC h3 {
- font-size: 12px; /* h3のdefault文字サイズは24px */
+ font-size: 12px; /* h3のdefault文字サイズは24px 10px 12px */
  line-height: 0.2;  /* h3のdefault行間は1 */
   margin-right: 10px;
   margin-left: auto;
+  margin-bottom: 2px;
 }
 .itemC a{
   color: black;
