--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,7 +95,7 @@ grid-gap: 0.1px;
  line-height: 0.2;  /* h2のdefault行間は1.333 */
   margin-right: auto;
   margin-left: 10px;
-  overflow: hidden;
+  white-space: nowrap;	
   /* overflow-wrap: break-all;折り返し */
 }
 .itemC h3 {
