--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,8 +95,8 @@ grid-gap: 0.1px;
  line-height: 0.2;  /* h2のdefault行間は1.333 */
   margin-right: auto;
   margin-left: 10px;
-  white-space: nowrap;	
-  /* overflow-wrap: break-all;折り返し */
+  white-space: nowrap; /* 折り返さない */
+  text-overflow: ellipsis;
 }
 .itemC h3 {
  font-size: 12px; /* h3のdefault文字サイズは24px 10px 12px */
