--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,7 +85,7 @@ grid-template-columns: 35.5vw; /* 1列 */
 grid-gap: 0.1px;
 }
 .itemC h1 {
- font-size: 14px; /* h1のdefault文字サイズは48px 12px 14px */
+ font-size: 6vmax; /* h1のdefault文字サイズは48px 12px *14px* */
  line-height: 0.5;  /* h1のdefault行間は1 */
   margin-right: auto;
   margin-left: 10px;
@@ -95,6 +95,7 @@ grid-gap: 0.1px;
  line-height: 0.2;  /* h2のdefault行間は1.333 */
   margin-right: auto;
   margin-left: 10px;
+  overflow-wrap: break-all; /* 折り返し */
 }
 .itemC h3 {
  font-size: 12px; /* h3のdefault文字サイズは24px 10px 12px */
