--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,13 +85,13 @@ grid-template-columns: 35.5vw; /* 1列 */
 grid-gap: 0.1px;
 }
 .itemC h1 {
- font-size: 6vmax; /* h1のdefault文字サイズは48px 12px *14px* */
+ font-size: 14px; /* h1のdefault文字サイズは48px 12px *14px* */
  line-height: 0.5;  /* h1のdefault行間は1 */
   margin-right: auto;
   margin-left: 10px;
 }
 .itemC h2 {
- font-size: 14px; /* h2のdefault文字サイズは36px 12px 14px */
+ font-size: 3vw; /* h2のdefault文字サイズは36px 12px *14px* */
  line-height: 0.2;  /* h2のdefault行間は1.333 */
   margin-right: auto;
   margin-left: 10px;
