--- a/stylesheet_c05_diary_archives.css
+++ b/stylesheet_c05_diary_archives.css
@@ -50,7 +50,8 @@ main{
   }
 .diary-list li a{	 
  color: black;
- text-decoration: none; 	 
+ text-decoration: none;
+ margin-left: 10px;
 }  
 
 .footer{
