--- a/stylesheet_c05_diary_archives.css
+++ b/stylesheet_c05_diary_archives.css
@@ -36,21 +36,22 @@ p a {
 	padding-left: 0;
 }
 .header-list li {
-	font-size: 18px; /* 16px 17px 15px 18px 4vh */
+	font-size: 18px; /* 16px */
 	display: inline; /* リスト要素を縦から横並びに変換する */
         padding: 35px 40px 20px 20px; /* 余白: [上][右][下][左] padding: 35px 40px  padding: 35px 40px 20px 20px; */
 }
 
 .header-list li a {
   color: white; /* リンクの色を指定 */
-  text-decoration: none; /* リンクの下線を非表示 */
+  text-decoration: none;  /* リンクの下線を非表示 */
+  /*  text-decoration: none!important; */
 }
 
 main{
- display: flex;
- flex-direction: column; /* 要素(文)を縦に配置 */
- justify-content: flex-start; /* 要素(文)を左寄せで配置 */
- margin-left: 10px;
+display: flex;
+flex-direction: column; /* 要素(文)を縦に配置 */
+justify-content: flex-start; /* 要素(文)を左寄せで配置 */
+margin-left: 10px;
 }
 
 .h3 {
@@ -58,20 +59,12 @@ main{
 line-height: 1.5; /* 1 2  */
 }
 
-.diary-list li{
-  list-style-type: none;
-  }
-.diary-list li a{	 
- color: black;
- text-decoration: none;
-}  
 
 .footer{
     height: 300px; /* 220px 200px 165px (70px) 140px */
     /*　width: 100%;　*/ 
     text-align: center;
-    background-color: #eee;
+    background-color: #eee; /* #eee #888 */
     margin: 10px 0 10px 0;
     margin-bottom: 0; /* なぜかこれがないとmainの右余白がなくなる??, header,footerの右端も空きができる */
 }
-
