--- a/stylesheet_c05_diary_archives.css
+++ b/stylesheet_c05_diary_archives.css
@@ -24,7 +24,11 @@ body{
 p a {	 
  color: black;
  text-decoration: none; 	 
-} 
+}
+li a {	 
+ color: black;
+ text-decoration: none; 	 
+}
 
 .nav{
    height: 70px;
