--- a/stylesheet_c05_diary_archives.css
+++ b/stylesheet_c05_diary_archives.css
@@ -25,10 +25,6 @@ p a {
  color: black;
  text-decoration: none; 	 
 }
-li a {	 
- color: black;
- text-decoration: none; 	 
-}
 
 .nav{
    height: 70px;
@@ -48,7 +44,6 @@ li a {
 .header-list li a {
   color: white; /* リンクの色を指定 */
   text-decoration: none;  /* リンクの下線を非表示 */
-  /*  text-decoration: none!important; */
 }
 
 main{
@@ -64,6 +59,9 @@ line-height: 1.5; /* 1 2  */
 }
 .diary-item{
 list-style-type: none;
+}
+.diary_link a {	 
+ color: black; 	 
 }
 
 .footer{
