--- a/stylesheet_c05_diary_archives.css
+++ b/stylesheet_c05_diary_archives.css
@@ -56,6 +56,9 @@ line-height: 1.5; /* 1 2  */
 .diary-item{
 list-style-type: none;
 }
+.diary-list li {
+	font-size: 18px;
+}
 .diary-list li a {	 
  color: black;
  text-decoration: underline; /* リンクの下線を表示 */
