--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,6 +7,11 @@ a {
   text-decoration: none; /* 全リンクの下線を非表示 */
 }
 
+p a {	 
+ color: black;
+ text-decoration: none; 	 
+}
+
 body{
     display: flex;
     flex-direction: column;
