--- a/stylesheet_c02_how_to_fun.css
+++ b/stylesheet_c02_how_to_fun.css
@@ -41,9 +41,15 @@ body{
   text-decoration: none; /* リンクの下線を非表示 */
 }
 
+p a {	 
+ color: black;
+ text-decoration: none; 	 
+}  
+
 main{
 margin-left: 10px;
 }
+
 
 .fun-list li {
 line-height: 1.5;
