--- a/stylesheet_c02_how_to_fun.css
+++ b/stylesheet_c02_how_to_fun.css
@@ -47,6 +47,9 @@ p a {
 }  
 
 main{
+display: flex;
+flex-direction: column; /* 要素(文)を縦に配置 */
+justify-content: flex-start; /* 要素(文)を左寄せで配置 */
 margin-left: 10px;
 }
 
