--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,7 +117,7 @@ grid-gap: 0.1px;
 /* #################### */
 
 .itemD{
-background-color: #eee; /* #eee #888 */ 
+background-color: #888; /* #eee #888 */ 
 text-align: center;
 margin-right: 5px;
 	/* right: 10px; */
