--- a/News/stylesheet_news_common.css
+++ b/News/stylesheet_news_common.css
@@ -64,7 +64,7 @@ line-height: 1.5; /* 1 2  */
 line-height: 1.5; /* 0.8 */
 }
 
-.diary_sent p{
+.news_sent p{
 /* font-size: 12px; */
 line-height: 1.5; /* 0.8 1.5 */
 }
