--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,13 +65,16 @@ main{
 grid-gap: 10px;
 }
 
+/* #################### */
 .itemA {
  grid-row: span 3; /* top pictureマス, 3行占有 */
  background-color: #eee;
  text-align: center;
  margin-left: 10px; /* */
 }
+/* #################### */
 
+/* #################### */
 .itemB{
 background-color: #888; /* #888 check */
  text-align: center;
@@ -79,6 +82,7 @@ background-color: #888; /* #888 check */
 margin-right: 5px; /* 10px 30pxだと右の余白が空きすぎる */
 	/* right: 10px; */
 }
+/* #################### */
 
 /* #################### */
 .itemC{
@@ -113,15 +117,43 @@ grid-gap: 0.1px;
   color: black;
   text-decoration: underline; /* リンクの下線を表示 */
 }
-
 /* #################### */
 
+/* #################### */
 .itemD{
-background-color: #888; /* #eee #888 */ 
-text-align: center;
+background-color: #eee; /* #888 */ 
 margin-right: 5px;
-	/* right: 10px; */
+display: grid;
+grid-template-rows: repeat(3, 2.08vw); /* 3行 */
+grid-template-columns: 35.5vw; /* 1列 */
+grid-gap: 0.1px;
 }
+
+.itemD h1 {
+ font-size: 1.4vw; /* h1のdefault文字サイズは48px 12px *14px* 1.2vw */
+ line-height: 0.5;  /* h1のdefault行間は1 */
+  margin-right: auto;
+  margin-left: 10px;
+}
+.itemD h2 {
+ font-size: 1.2vw; /* h2のdefault文字サイズは36px 12px *14px* 1.0vw */
+ line-height: 0.2;  /* h2のdefault行間は1.333 */
+  margin-right: auto;
+  margin-left: 10px;
+  overflow-wrap: break-all; /* 折り返し */
+}
+.itemD h3 {
+ font-size: 1.1vw; /* h3のdefault文字サイズは24px 10px *12px* */
+ line-height: 0.2;  /* h3のdefault行間は1 */
+  margin-right: 10px;
+  margin-left: auto;
+  padding-bottom: 3px; /* 5pxだとh2が隠れるのでダメ */
+}
+.itemC a{
+  color: black;
+  text-decoration: underline; /* リンクの下線を表示 */
+}
+/* #################### */
 
 .footer{
     height: 300px; /* 220px 200px 165px (70px) 140px */
