--- a/stylesheet.css
+++ b/stylesheet.css
@@ -149,7 +149,7 @@ grid-gap: 0.1px;
   margin-left: auto;
   padding-bottom: 3px; /* 5pxだとh2が隠れるのでダメ */
 }
-.itemC a{
+.itemD a{
   color: black;
   text-decoration: underline; /* リンクの下線を表示 */
 }
