--- a/stylesheet.css
+++ b/stylesheet.css
@@ -170,6 +170,10 @@ grid-gap: 0.1px;
  display: block; /* flexではダメだった */
 }
 
+.intro_pic {
+    width: 20px;
+}
+
 .intro_box h3{
     font-size: 14px; /* 12px */
 }
