--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,7 +173,7 @@ grid-gap: 0.1px;
 .intro_box intro_pic{
   margin-right: 0;	
   margin-left: auto;
-  width: 100px;
+  width: 40px; /* 20px->小さすぎ, 100px->大きすぎ */
   }
 
 .intro_box h3{
