--- a/stylesheet_c04_gallery_archives.css
+++ b/stylesheet_c04_gallery_archives.css
@@ -50,6 +50,10 @@ main{
 display: flex;
 }
 
+.gallery-item{
+
+}
+
 .footer{
     height: 300px; /* 220px 200px 165px (70px) 140px */
     /*　width: 100%;　*/ 
