--- a/stylesheet.css
+++ b/stylesheet.css
@@ -177,3 +177,9 @@ grid-gap: 0.1px;
     font-size: 14px; /* 12px */
     line-height: 1; /* *1* 1.2 0.7 */
 }
+
+.intro_pic{
+  margin: 0 0 0 auto;
+  width: 40px;
+}
+
