--- a/stylesheet.css
+++ b/stylesheet.css
@@ -66,7 +66,7 @@ grid-gap: 10px;
 }
 
 /* #################### */
-.itemA {
+.itemA{
  grid-row: span 3; /* top pictureマス, 3行占有 */
  background-color: #eee;
  text-align: center;
@@ -178,7 +178,7 @@ grid-gap: 0.1px;
     line-height: 1; /* *1* 1.2 0.7 */
 }
 
-div .intro_pic{
+.intro_pic{
   margin: 0 0 0 auto;
   width: 15px;
 }
