--- a/stylesheet.css
+++ b/stylesheet.css
@@ -165,11 +165,13 @@ grid-gap: 0.1px;
 }
 
 .intro_box{
-  position: relative; /* 重ねるtextの位置をintro_box内基準にする */	
+  width: 40px; /* iconサイズ? */	
+  position: relative; /* 重ねるtextの位置をintro_box内基準にする */
   margin: 120px 20px 10px auto; /* 100px 50px 10px auto; */
-  width: 30%; /* ? */
+  /* width: 30%;  ? */
   display: block; /* flexではダメだった */
 }
+
 
 .intro_title{
     font-size: 14px; /* 12px <h3>の文字サイズ */
